--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
           </ul>
         </nav>
         <div class="header__info">
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          <a href="tel:+1212-772-4150">+1212-772-4150</a>
+          <ul>
+         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+1212-772-4150">+1212-772-4150</a></li>
+        </ul>
         </div>
       </div>
     </header>
