--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework2</title>
+    <title>Homework4</title>
     <link
       rel="stylesheet"
       href="node_modules/modern-normalize/modern-normalize.css"
@@ -108,22 +108,22 @@
       <div class="titlu2"><h2 class="h2">Our Team</h2></div> 
       <section class="team-section">
         <div class="container">
-          <div>
+          <div class="team-section__cards">
             <img src="images/1.jpg" alt="a man" width="270" />
             <h6 class="h6">Christopher Walker</h6>
             <p class="team">Product Designer</p>
           </div>
-          <div>
+          <div class="team-section__cards">
             <img src="images/2.jpg" alt="a women" width="270" />
             <h6 class="h6">Kylie Evans</h6>
             <p class="team">Frontend Developer</p>
           </div>
-          <div>
+          <div class="team-section__cards">
             <img src="images/3.jpg" alt="a man" width="270" />
             <h6 class="h6">Ryan Harris</h6>
             <p class="team">Marketing</p>
           </div>
-          <div>
+          <div class="team-section__cards">
             <img src="images/4.jpg" alt="a man" width="270" />
             <h6 class="h6">Tyler Moore</h6>
             <p class="team">UI Designer</p>
