--- a/index.html
+++ b/index.html
@@ -37,10 +37,14 @@
           </ul>
         </nav>
         <div class="header__info">
-          <ul>
-         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+1212-772-4150">+1212-772-4150</a></li>
-        </ul>
+          <svg class="item0">
+            <use href="/images/icons.svg/symbol-defs.svg#icon-envelope"></use>
+          </svg>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <svg class="item0">
+            <use href="/images/icons.svg/symbol-defs.svg#icon-smartphone"></use>
+          </svg>
+          <a href="tel:+1212-772-4150">+1212-772-4150</a>
         </div>
       </div>
     </header>
@@ -51,14 +55,37 @@
         <h1 class="hero-section__h1">
           EFFECTIVE SOLUTIONS FOR<br />YOUR BUSINESS
         </h1>
-          <div class="div-button">
-            <button type="button" class="hero-section__service">
-              Request our service
-            </button>
-          </div>
-      
+        <div class="div-button">
+          <button type="button" class="hero-section__service">
+            Request our service
+          </button>
+        </div>
       </section>
-      <!--aout section-->
+      <!--about section-->
+
+      <ul class="about-cards">
+        <li>
+          <svg class="item1">
+            <use href="/images/icons.svg/symbol-defs.svg#icon-antenna"></use>
+          </svg>
+        </li>
+        <li>
+          <svg class="item1">
+            <use href="/images/icons.svg/symbol-defs.svg#icon-clock"></use>
+          </svg>
+        </li>
+        <li>
+          <svg class="item1">
+            <use href="/images/icons.svg/symbol-defs.svg#icon-diagram"></use>
+          </svg>
+        </li>
+        <li>
+          <svg class="item1">
+            <use href="/images/icons.svg/symbol-defs.svg#icon-astronaut"></use>
+          </svg>
+        </li>
+      </ul>
+
       <section class="about">
         <div class="container">
           <div>
@@ -93,7 +120,6 @@
       </section>
       <!--What we do Section-->
 
-     
       <section class="what-section">
         <div class="titlu1"><h2 class="h2">What we do</h2></div>
         <div class="container">
@@ -105,31 +131,186 @@
 
       <!--Our Team Section-->
 
-      <div class="titlu2"><h2 class="h2">Our Team</h2></div> 
+      <div class="titlu2"><h2 class="h2">Our Team</h2></div>
       <section class="team-section">
         <div class="container">
           <div class="team-section__cards">
             <img src="images/1.jpg" alt="a man" width="270" />
             <h6 class="h6">Christopher Walker</h6>
             <p class="team">Product Designer</p>
+            <ul class="team-section__social">
+              <li>
+                <svg class="item2">
+                  <use
+                    href="/images/icons.svg/symbol-defs.svg#icon-instagram"
+                  ></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="item2">
+                  <use
+                    href="/images/icons.svg/symbol-defs.svg#icon-twitter"
+                  ></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="item2">
+                  <use
+                    href="/images/icons.svg/symbol-defs.svg#icon-facebook"
+                  ></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="item2">
+                  <use
+                    href="/images/icons.svg/symbol-defs.svg#icon-linkedin"
+                  ></use>
+                </svg>
+              </li>
+            </ul>
           </div>
           <div class="team-section__cards">
             <img src="images/2.jpg" alt="a women" width="270" />
             <h6 class="h6">Kylie Evans</h6>
             <p class="team">Frontend Developer</p>
+            <ul class="team-section__social">
+              <li>
+                <svg class="item2">
+                  <use
+                    href="/images/icons.svg/symbol-defs.svg#icon-instagram"
+                  ></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="item2">
+                  <use
+                    href="/images/icons.svg/symbol-defs.svg#icon-twitter"
+                  ></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="item2">
+                  <use
+                    href="/images/icons.svg/symbol-defs.svg#icon-facebook"
+                  ></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="item2">
+                  <use
+                    href="/images/icons.svg/symbol-defs.svg#icon-linkedin"
+                  ></use>
+                </svg>
+              </li>
+            </ul>
           </div>
           <div class="team-section__cards">
             <img src="images/3.jpg" alt="a man" width="270" />
             <h6 class="h6">Ryan Harris</h6>
             <p class="team">Marketing</p>
+            <ul class="team-section__social">
+              <li>
+                <svg class="item2">
+                  <use
+                    href="/images/icons.svg/symbol-defs.svg#icon-instagram"
+                  ></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="item2">
+                  <use
+                    href="/images/icons.svg/symbol-defs.svg#icon-twitter"
+                  ></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="item2">
+                  <use
+                    href="/images/icons.svg/symbol-defs.svg#icon-facebook"
+                  ></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="item2">
+                  <use
+                    href="/images/icons.svg/symbol-defs.svg#icon-linkedin"
+                  ></use>
+                </svg>
+              </li>
+            </ul>
           </div>
           <div class="team-section__cards">
             <img src="images/4.jpg" alt="a man" width="270" />
             <h6 class="h6">Tyler Moore</h6>
             <p class="team">UI Designer</p>
+            <ul class="team-section__social">
+              <li>
+                <svg class="item2">
+                  <use
+                    href="/images/icons.svg/symbol-defs.svg#icon-instagram"
+                  ></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="item2">
+                  <use
+                    href="/images/icons.svg/symbol-defs.svg#icon-twitter"
+                  ></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="item2">
+                  <use
+                    href="/images/icons.svg/symbol-defs.svg#icon-facebook"
+                  ></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="item2">
+                  <use
+                    href="/images/icons.svg/symbol-defs.svg#icon-linkedin"
+                  ></use>
+                </svg>
+              </li>
+            </ul>
           </div>
         </div>
       </section>
+      <!--Regular Customers-->
+
+      <div class="titlu3"><h2 class="h2">Regular Customers</h2></div>
+      <ul class="Customers-section">
+        <li>
+          <svg class="item3">
+            <use href="/images/icons.svg/symbol-defs.svg#icon-Logo0"></use>
+          </svg>
+        </li>
+        <li>
+          <svg class="item3">
+            <use href="/images/icons.svg/symbol-defs.svg#icon-Logo1"></use>
+          </svg>
+        </li>
+        <li>
+          <svg class="item3">
+            <use href="/images/icons.svg/symbol-defs.svg#icon-Logo2"></use>
+          </svg>
+        </li>
+        <li>
+          <svg class="item3">
+            <use href="/images/icons.svg/symbol-defs.svg#icon-Logo3"></use>
+          </svg>
+        </li>
+        <li>
+          <svg class="item3">
+            <use href="/images/icons.svg/symbol-defs.svg#icon-Logo4"></use>
+          </svg>
+        </li>
+        <li>
+          <svg class="item3">
+            <use href="/images/icons.svg/symbol-defs.svg#icon-Logo5"></use>
+          </svg>
+        </li>
+      </ul>
     </main>
 
     <!--Footer Section-->
