--- a/images/icons.svg/demo-external-svg.html
+++ b/images/icons.svg/demo-external-svg.html
@@ -17,6 +17,26 @@
         <h1 class="mvm mtn fgc1">Grid Size: 0</h1>
         <div class="glyph fs1">
             <div class="clearfix pbs">
+                <svg class="icon icon-linkedin1"><use xlink:href="symbol-defs.svg#icon-linkedin1"></use></svg><span class="name"> icon-linkedin1</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-facebook1"><use xlink:href="symbol-defs.svg#icon-facebook1"></use></svg><span class="name"> icon-facebook1</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-twitter1"><use xlink:href="symbol-defs.svg#icon-twitter1"></use></svg><span class="name"> icon-twitter1</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-instagram1"><use xlink:href="symbol-defs.svg#icon-instagram1"></use></svg><span class="name"> icon-instagram1</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
                 <svg class="icon icon-instagram"><use xlink:href="symbol-defs.svg#icon-instagram"></use></svg><span class="name"> icon-instagram</span>
             </div>
         </div>
