--- a/index.html
+++ b/index.html
@@ -319,13 +319,51 @@
           <a href="#"
             ><p class="p__logo"><span class="span__logo">Web</span>Studio</p></a
           >
-          695 Park Ave, NY 10065, USA
+          <p class="footer-addres__addres">695 Park Ave, NY 10065, USA</p>
+
           <a href="https://seriserj.github.io/goit-markup-hw-04/"
             ><p><span>info@devstudio.com</span></p></a
           >
           <a href="tel:+1212-772-4150">+1212-772-4150</a>
         </address>
       </div>
+      <!--Footer Section social-->
+
+      <section class="footer-social">
+        <h4 class="footer-social__h4">FIND US ON</h4>
+        <div class="test">
+          <ul class="footer-social__logo">
+            <li>
+              <svg class="item4">
+                <use
+                  href="/images/icons.svg/symbol-defs.svg#icon-instagram1"
+                ></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="item4">
+                <use
+                  href="/images/icons.svg/symbol-defs.svg#icon-twitter1"
+                ></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="item4">
+                <use
+                  href="/images/icons.svg/symbol-defs.svg#icon-facebook1"
+                ></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="item4">
+                <use
+                  href="/images/icons.svg/symbol-defs.svg#icon-linkedin1"
+                ></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
+      </section>
     </footer>
   </body>
 </html>
