--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Homework4</title>
     <link
       rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
     />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -38,11 +38,11 @@
         </nav>
         <div class="header__info">
           <svg class="item0">
-            <use href="/images/icons.svg/symbol-defs.svg#icon-envelope"></use>
+            <use href="/images/icons/symbol-defs.svg#icon-envelope"></use>
           </svg>
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           <svg class="item0">
-            <use href="/images/icons.svg/symbol-defs.svg#icon-smartphone"></use>
+            <use href="/images/icons/symbol-defs.svg#icon-smartphone"></use>
           </svg>
           <a href="tel:+1212-772-4150">+1212-772-4150</a>
         </div>
@@ -66,22 +66,22 @@
       <ul class="about-cards">
         <li>
           <svg class="item1">
-            <use href="/images/icons.svg/symbol-defs.svg#icon-antenna"></use>
+            <use href="/images/icons/symbol-defs.svg#icon-antenna"></use>
           </svg>
         </li>
         <li>
           <svg class="item1">
-            <use href="/images/icons.svg/symbol-defs.svg#icon-clock"></use>
+            <use href="/images/icons/symbol-defs.svg#icon-clock"></use>
           </svg>
         </li>
         <li>
           <svg class="item1">
-            <use href="/images/icons.svg/symbol-defs.svg#icon-diagram"></use>
+            <use href="/images/icons/symbol-defs.svg#icon-diagram"></use>
           </svg>
         </li>
         <li>
           <svg class="item1">
-            <use href="/images/icons.svg/symbol-defs.svg#icon-astronaut"></use>
+            <use href="/images/icons/symbol-defs.svg#icon-astronaut"></use>
           </svg>
         </li>
       </ul>
@@ -142,29 +142,23 @@
               <li>
                 <svg class="item2">
                   <use
-                    href="/images/icons.svg/symbol-defs.svg#icon-instagram"
+                    href="/images/icons/symbol-defs.svg#icon-instagram"
                   ></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use
-                    href="/images/icons.svg/symbol-defs.svg#icon-twitter"
-                  ></use>
+                  <use href="/images/icons/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use
-                    href="/images/icons.svg/symbol-defs.svg#icon-facebook"
-                  ></use>
+                  <use href="/images/icons/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use
-                    href="/images/icons.svg/symbol-defs.svg#icon-linkedin"
-                  ></use>
+                  <use href="/images/icons/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </li>
             </ul>
@@ -177,29 +171,23 @@
               <li>
                 <svg class="item2">
                   <use
-                    href="/images/icons.svg/symbol-defs.svg#icon-instagram"
+                    href="/images/icons/symbol-defs.svg#icon-instagram"
                   ></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use
-                    href="/images/icons.svg/symbol-defs.svg#icon-twitter"
-                  ></use>
+                  <use href="/images/icons/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use
-                    href="/images/icons.svg/symbol-defs.svg#icon-facebook"
-                  ></use>
+                  <use href="/images/icons/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use
-                    href="/images/icons.svg/symbol-defs.svg#icon-linkedin"
-                  ></use>
+                  <use href="/images/icons/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </li>
             </ul>
@@ -212,29 +200,23 @@
               <li>
                 <svg class="item2">
                   <use
-                    href="/images/icons.svg/symbol-defs.svg#icon-instagram"
+                    href="/images/icons/symbol-defs.svg#icon-instagram"
                   ></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use
-                    href="/images/icons.svg/symbol-defs.svg#icon-twitter"
-                  ></use>
+                  <use href="/images/icons/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use
-                    href="/images/icons.svg/symbol-defs.svg#icon-facebook"
-                  ></use>
+                  <use href="/images/icons/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use
-                    href="/images/icons.svg/symbol-defs.svg#icon-linkedin"
-                  ></use>
+                  <use href="/images/icons/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </li>
             </ul>
@@ -247,29 +229,23 @@
               <li>
                 <svg class="item2">
                   <use
-                    href="/images/icons.svg/symbol-defs.svg#icon-instagram"
+                    href="/images/icons/symbol-defs.svg#icon-instagram"
                   ></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use
-                    href="/images/icons.svg/symbol-defs.svg#icon-twitter"
-                  ></use>
+                  <use href="/images/icons/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use
-                    href="/images/icons.svg/symbol-defs.svg#icon-facebook"
-                  ></use>
+                  <use href="/images/icons/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use
-                    href="/images/icons.svg/symbol-defs.svg#icon-linkedin"
-                  ></use>
+                  <use href="/images/icons/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </li>
             </ul>
@@ -282,32 +258,32 @@
       <ul class="Customers-section">
         <li>
           <svg class="item3">
-            <use href="/images/icons.svg/symbol-defs.svg#icon-Logo0"></use>
+            <use href="/images/icons/symbol-defs.svg#icon-Logo0"></use>
           </svg>
         </li>
         <li>
           <svg class="item3">
-            <use href="/images/icons.svg/symbol-defs.svg#icon-Logo1"></use>
+            <use href="/images/icons/symbol-defs.svg#icon-Logo1"></use>
           </svg>
         </li>
         <li>
           <svg class="item3">
-            <use href="/images/icons.svg/symbol-defs.svg#icon-Logo2"></use>
+            <use href="/images/icons/symbol-defs.svg#icon-Logo2"></use>
           </svg>
         </li>
         <li>
           <svg class="item3">
-            <use href="/images/icons.svg/symbol-defs.svg#icon-Logo3"></use>
+            <use href="/images/icons/symbol-defs.svg#icon-Logo3"></use>
           </svg>
         </li>
         <li>
           <svg class="item3">
-            <use href="/images/icons.svg/symbol-defs.svg#icon-Logo4"></use>
+            <use href="/images/icons/symbol-defs.svg#icon-Logo4"></use>
           </svg>
         </li>
         <li>
           <svg class="item3">
-            <use href="/images/icons.svg/symbol-defs.svg#icon-Logo5"></use>
+            <use href="/images/icons/symbol-defs.svg#icon-Logo5"></use>
           </svg>
         </li>
       </ul>
@@ -335,30 +311,22 @@
           <ul class="footer-social__logo">
             <li>
               <svg class="item4">
-                <use
-                  href="/images/icons.svg/symbol-defs.svg#icon-instagram1"
-                ></use>
+                <use href="/images/icons/symbol-defs.svg#icon-instagram1"></use>
               </svg>
             </li>
             <li>
               <svg class="item4">
-                <use
-                  href="/images/icons.svg/symbol-defs.svg#icon-twitter1"
-                ></use>
+                <use href="/images/icons/symbol-defs.svg#icon-twitter1"></use>
               </svg>
             </li>
             <li>
               <svg class="item4">
-                <use
-                  href="/images/icons.svg/symbol-defs.svg#icon-facebook1"
-                ></use>
+                <use href="/images/icons/symbol-defs.svg#icon-facebook1"></use>
               </svg>
             </li>
             <li>
               <svg class="item4">
-                <use
-                  href="/images/icons.svg/symbol-defs.svg#icon-linkedin1"
-                ></use>
+                <use href="/images/icons/symbol-defs.svg#icon-linkedin1"></use>
               </svg>
             </li>
           </ul>
