--- a/portfolio.html
+++ b/portfolio.html
@@ -6,8 +6,9 @@
     <title>Portfolio</title>
     <link
       rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
     />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -35,7 +36,13 @@
           </ul>
         </nav>
         <div class="header__info">
+          <svg class="item0">
+            <use href="/images/icons.svg/symbol-defs.svg#icon-envelope"></use>
+          </svg>
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <svg class="item0">
+            <use href="/images/icons.svg/symbol-defs.svg#icon-smartphone"></use>
+          </svg>
           <a href="tel:+1212-772-4150">+1212-772-4150</a>
         </div>
       </div>
@@ -118,36 +125,29 @@
         </address>
       </div>
       <!--Footer Section social-->
+
       <section class="footer-social">
         <h4 class="footer-social__h4">FIND US ON</h4>
         <div class="test">
           <ul class="footer-social__logo">
             <li>
               <svg class="item4">
-                <use
-                  href="/images/icons.svg/symbol-defs.svg#icon-instagram1"
-                ></use>
+                <use href="/images/icons/symbol-defs.svg#icon-instagram1"></use>
               </svg>
             </li>
             <li>
               <svg class="item4">
-                <use
-                  href="/images/icons.svg/symbol-defs.svg#icon-twitter1"
-                ></use>
+                <use href="/images/icons/symbol-defs.svg#icon-twitter1"></use>
               </svg>
             </li>
             <li>
               <svg class="item4">
-                <use
-                  href="/images/icons.svg/symbol-defs.svg#icon-facebook1"
-                ></use>
+                <use href="/images/icons/symbol-defs.svg#icon-facebook1"></use>
               </svg>
             </li>
             <li>
               <svg class="item4">
-                <use
-                  href="/images/icons.svg/symbol-defs.svg#icon-linkedin1"
-                ></use>
+                <use href="/images/icons/symbol-defs.svg#icon-linkedin1"></use>
               </svg>
             </li>
           </ul>
