--- a/portfolio.html
+++ b/portfolio.html
@@ -37,11 +37,11 @@
         </nav>
         <div class="header__info">
           <svg class="item0">
-            <use href="/images/icons.svg/symbol-defs.svg#icon-envelope"></use>
+            <use href="/images/icons/symbol-defs.svg#icon-envelope"></use>
           </svg>
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           <svg class="item0">
-            <use href="/images/icons.svg/symbol-defs.svg#icon-smartphone"></use>
+            <use href="/images/icons/symbol-defs.svg#icon-smartphone"></use>
           </svg>
           <a href="tel:+1212-772-4150">+1212-772-4150</a>
         </div>
