--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         </nav>
         <div class="header__info">
           <svg class="item0">
-            <use href="/images/icons/symbol-defs.svg#icon-envelope"></use>
+            <use href="./images/icons/symbol-defs.svg#icon-envelope"></use>
           </svg>
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           <svg class="item0">
-            <use href="/images/icons/symbol-defs.svg#icon-smartphone"></use>
+            <use href="./images/icons/symbol-defs.svg#icon-smartphone"></use>
           </svg>
           <a href="tel:+1212-772-4150">+1212-772-4150</a>
         </div>
@@ -66,7 +66,7 @@
       <ul class="about-cards">
         <li>
           <svg class="item1">
-            <use href="/images/icons/symbol-defs.svg#icon-antenna"></use>
+            <use href="./images/icons/symbol-defs.svg#icon-antenna"></use>
           </svg>
         </li>
         <li>
