--- a/index.html
+++ b/index.html
@@ -71,17 +71,17 @@
         </li>
         <li>
           <svg class="item1">
-            <use href="/images/icons/symbol-defs.svg#icon-clock"></use>
+            <use href="./images/icons/symbol-defs.svg#icon-clock"></use>
           </svg>
         </li>
         <li>
           <svg class="item1">
-            <use href="/images/icons/symbol-defs.svg#icon-diagram"></use>
+            <use href="./images/icons/symbol-defs.svg#icon-diagram"></use>
           </svg>
         </li>
         <li>
           <svg class="item1">
-            <use href="/images/icons/symbol-defs.svg#icon-astronaut"></use>
+            <use href="./images/icons/symbol-defs.svg#icon-astronaut"></use>
           </svg>
         </li>
       </ul>
@@ -142,23 +142,27 @@
               <li>
                 <svg class="item2">
                   <use
-                    href="/images/icons/symbol-defs.svg#icon-instagram"
+                    href="./images/icons/symbol-defs.svg#icon-instagram"
                   ></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use href="/images/icons/symbol-defs.svg#icon-twitter"></use>
+                  <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use href="/images/icons/symbol-defs.svg#icon-facebook"></use>
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-facebook"
+                  ></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use href="/images/icons/symbol-defs.svg#icon-linkedin"></use>
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-linkedin"
+                  ></use>
                 </svg>
               </li>
             </ul>
@@ -171,23 +175,27 @@
               <li>
                 <svg class="item2">
                   <use
-                    href="/images/icons/symbol-defs.svg#icon-instagram"
+                    href="./images/icons/symbol-defs.svg#icon-instagram"
                   ></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use href="/images/icons/symbol-defs.svg#icon-twitter"></use>
+                  <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use href="/images/icons/symbol-defs.svg#icon-facebook"></use>
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-facebook"
+                  ></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use href="/images/icons/symbol-defs.svg#icon-linkedin"></use>
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-linkedin"
+                  ></use>
                 </svg>
               </li>
             </ul>
@@ -200,23 +208,27 @@
               <li>
                 <svg class="item2">
                   <use
-                    href="/images/icons/symbol-defs.svg#icon-instagram"
+                    href="./images/icons/symbol-defs.svg#icon-instagram"
                   ></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use href="/images/icons/symbol-defs.svg#icon-twitter"></use>
+                  <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use href="/images/icons/symbol-defs.svg#icon-facebook"></use>
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-facebook"
+                  ></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use href="/images/icons/symbol-defs.svg#icon-linkedin"></use>
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-linkedin"
+                  ></use>
                 </svg>
               </li>
             </ul>
@@ -229,23 +241,27 @@
               <li>
                 <svg class="item2">
                   <use
-                    href="/images/icons/symbol-defs.svg#icon-instagram"
+                    href="./images/icons/symbol-defs.svg#icon-instagram"
                   ></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use href="/images/icons/symbol-defs.svg#icon-twitter"></use>
+                  <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use href="/images/icons/symbol-defs.svg#icon-facebook"></use>
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-facebook"
+                  ></use>
                 </svg>
               </li>
               <li>
                 <svg class="item2">
-                  <use href="/images/icons/symbol-defs.svg#icon-linkedin"></use>
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-linkedin"
+                  ></use>
                 </svg>
               </li>
             </ul>
@@ -258,32 +274,32 @@
       <ul class="Customers-section">
         <li>
           <svg class="item3">
-            <use href="/images/icons/symbol-defs.svg#icon-Logo0"></use>
+            <use href="./images/icons/symbol-defs.svg#icon-Logo0"></use>
           </svg>
         </li>
         <li>
           <svg class="item3">
-            <use href="/images/icons/symbol-defs.svg#icon-Logo1"></use>
+            <use href="./images/icons/symbol-defs.svg#icon-Logo1"></use>
           </svg>
         </li>
         <li>
           <svg class="item3">
-            <use href="/images/icons/symbol-defs.svg#icon-Logo2"></use>
+            <use href="./images/icons/symbol-defs.svg#icon-Logo2"></use>
           </svg>
         </li>
         <li>
           <svg class="item3">
-            <use href="/images/icons/symbol-defs.svg#icon-Logo3"></use>
+            <use href="./images/icons/symbol-defs.svg#icon-Logo3"></use>
           </svg>
         </li>
         <li>
           <svg class="item3">
-            <use href="/images/icons/symbol-defs.svg#icon-Logo4"></use>
+            <use href="./images/icons/symbol-defs.svg#icon-Logo4"></use>
           </svg>
         </li>
         <li>
           <svg class="item3">
-            <use href="/images/icons/symbol-defs.svg#icon-Logo5"></use>
+            <use href="./images/icons/symbol-defs.svg#icon-Logo5"></use>
           </svg>
         </li>
       </ul>
@@ -311,22 +327,24 @@
           <ul class="footer-social__logo">
             <li>
               <svg class="item4">
-                <use href="/images/icons/symbol-defs.svg#icon-instagram1"></use>
+                <use
+                  href="./images/icons/symbol-defs.svg#icon-instagram1"
+                ></use>
               </svg>
             </li>
             <li>
               <svg class="item4">
-                <use href="/images/icons/symbol-defs.svg#icon-twitter1"></use>
+                <use href="./images/icons/symbol-defs.svg#icon-twitter1"></use>
               </svg>
             </li>
             <li>
               <svg class="item4">
-                <use href="/images/icons/symbol-defs.svg#icon-facebook1"></use>
+                <use href="./images/icons/symbol-defs.svg#icon-facebook1"></use>
               </svg>
             </li>
             <li>
               <svg class="item4">
-                <use href="/images/icons/symbol-defs.svg#icon-linkedin1"></use>
+                <use href="./images/icons/symbol-defs.svg#icon-linkedin1"></use>
               </svg>
             </li>
           </ul>
