--- a/portfolio.html
+++ b/portfolio.html
@@ -60,10 +60,14 @@
       </section>
       <section class="portfolio-img">
         <div class="container">
-          <div class="container__portfolio">
-            <img src="images/i1.jpg" alt="laptop" width="370" />
-            <h6 class="h6">Technoduck</h6>
-            <p class="team">Web-site</p>
+          <div class="box">
+            <div class="container__portfolio">
+              <div class="overlay">
+                <img src="images/i1.jpg" alt="laptop" width="370" />
+                <h6 class="h6">Technoduck</h6>
+                <p class="team">Web-site</p>
+              </div>
+            </div>
           </div>
           <div class="container__portfolio">
             <img src="images/i2.jpg" alt="poster" width="370" />
