--- a/portfolio.html
+++ b/portfolio.html
@@ -62,11 +62,10 @@
         <div class="container">
           <div class="box">
             <div class="container__portfolio">
-              <div class="overlay">
-                <img src="images/i1.jpg" alt="laptop" width="370" />
-                <h6 class="h6">Technoduck</h6>
-                <p class="team">Web-site</p>
-              </div>
+              <img src="images/i1.jpg" alt="laptop" width="370" />
+              <h6 class="h6">Technoduck</h6>
+              <p class="team">Web-site</p>
+              <div class="overlay"></div>
             </div>
           </div>
           <div class="container__portfolio">
